# chat-agents

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md
apps/api/: .env.example  ARCHITECTURE.md  README.md  models.yaml  pyproject.toml
apps/api/app/: main.py
apps/api/app/agents/: classifier.py  specs.py  supervisor_graph.py
apps/api/app/config/: settings.py
apps/api/app/models/: registry.py
apps/api/app/observability/: __init__.py  middleware.py  structlog_setup.py
apps/api/app/routers/: _runner.py  chat.py  research.py
apps/api/app/schemas/: chat.py  research.py  routing.py
apps/api/app/services/: agent_factory.py  llm_factory.py  prompt_registry.py  search_tool.py
apps/api/app/stores/: memory_store.py
apps/api/app/streaming/: chunk_mapper.py  events.py
apps/api/app/tools/: __init__.py  fetch_url.py  registry.py  repo_search.py  think_tool.py  web_search.py
apps/api/prompts/: active.yaml
apps/api/prompts/chat/: v1.md
apps/api/prompts/classifier/: v1.md
apps/api/prompts/code/: v1.md
apps/api/prompts/critic/: v1.md
apps/api/prompts/main/: v1.md  v2.md  v3.md
apps/api/prompts/planner/: v1.md
apps/api/prompts/research/: v1.md
apps/api/prompts/researcher/: v2.md  v3.md
apps/api/prompts/summarize/: v1.md
apps/api/tests/: conftest.py
apps/api/tests/e2e/: test_budget_e2e.py  test_research_endpoint.py
apps/api/tests/integration/: test_agent_factory.py  test_chat_endpoint.py  test_runner.py  test_supervisor_graph.py
apps/api/tests/unit/: test_agent_specs.py  test_budget_guard.py  test_chunk_mapper.py  test_classifier.py  test_deep_research_builder.py  test_events.py  test_llm_factory.py  test_memory_store.py  test_model_registry.py  test_prompt_registry.py  test_react_builder.py  test_research_router.py  test_search_tool.py  test_settings.py  test_structlog_context.py  test_think_tool.py  test_tool_fetch_url.py  test_tool_registry.py  (+2 more)
(+62 files in other folders)
