[project]
name = "deep-agents-research-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "deepagents>=0.5.2",
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "tavily-python>=0.5,<1.0",
    "sse-starlette>=2.1,<3.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

# ----- Ruff: linter + formatter (replaces black / isort / flake8 / pyupgrade) -----
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "ASYNC", # async-specific lints
    "RUF",
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "S101"]  # allow asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----- mypy: strict-ish typing -----
[tool.mypy]
python_version = "3.11"
strict = false                 # demo: relaxed; tighten over time
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true   # require type hints on def signatures
ignore_missing_imports = true  # third-party libs without stubs
exclude = ["data/", ".venv/"]
